fixed overflow

--- a/client/sevenlee/assets/style/app.less
+++ b/client/sevenlee/assets/style/app.less
@@ -83,7 +83,6 @@
     padding: 75px 15px 15px 15px;
     margin: 0 auto;
     height: 100%;
-    overflow: hidden;
     box-sizing: border-box;
     @media all and (max-width: 540px) {
       & {
